Correctly aligned intro bg placeholder image

--- a/css/sass/main.css
+++ b/css/sass/main.css
@@ -52,16 +52,15 @@ This file is used to contain all layouts imports.
 Files inside this folder can contain abstract settings, helpers or functions. They have no direct output.
 */
 .header-intro {
-  height: 80vh;
+  height: 90vh;
   background: #fff;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
-  background-color: red; }
+  background-size: cover; }
   .header-intro .intro-info {
     position: absolute;
-    top: 30%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%); }
     .header-intro .intro-info h1, .header-intro .intro-info h2 {
@@ -74,8 +73,12 @@ Files inside this folder can contain abstract settings, helpers or functions. Th
     margin-right: auto;
     padding-top: 60px; }
   .header-intro .intro-bg {
+    display: block;
+    max-width: 100%;
     position: absolute;
-    bottom: 0; }
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%); }
 
 /* Main Navigation */
 .container-nav {
